--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div id = "info">
             <div class = "pesan white">
-                Hi! my name is Andy, i'm a 18 years old computer science student. <br/>
+                Hi! my name is Andy, i'm an 18 years old computer science student. <br/>
                 As of now, i'm still at my first year of uni.
             </div>
         </div>
