--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 window.onload = changeSalam();
             </script>
             <div class = "pesan">
-                <h1>cs student, tech enthusiast, dying.</h1>
+                <h1>cs student, tech enthusiast, currently dying.</h1>
                 <h2><a href = #info class = "clickable">learn more about me</a></h2>
             </div>
         </div>
