added hover transition

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!-- untuk pp -->
             <nav>
                 <!-- Buttons to click -->
-                <ul>
+                <ul class = "navClickable">
                     <li><h2><a href = "index.html">Home</a></h2></li>
                     <li><h2><a href = "#info">About</a></h2></li>
                     <li class = "profile">
