Added some scripts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>AndyDev</title>
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" href="favicon.ico"/>
+        <script src = "js/script.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -26,6 +27,10 @@
             © 2020 Andy
         </div>
         <div id = "home">
+            <div id = "pesanSalam"></div>
+            <script type="text/javascript">
+                window.onload = changeSalam();
+            </script>
             <div class = "pesan">
                 <h1>cs student, tech enthusiast, dying.</h1>
                 <h2><a href = #info class = "clickable">learn more about me</a></h2>
