--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Andy Dev<title/>
         <link rel="shortcut icon" href="favicon.ico"/>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Varela&display=swap" rel="stylesheet">
