--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <nav class = "containerNav">
                 <ul>
                     <li><a href = "index.html">home</a></li>
-                    <li><a href = "notfound.html">.project</a></li>
+                    <li><a href = "projects.html">.project</a></li>
                     <li><a href = "#about">about</a></li>
                     <li><a href = "#contact">contact</a></li>
                 </ul>
@@ -47,7 +47,7 @@
                 <h1 class = "boxed">what am i currently doing?</h1>
             </div>
             <div class = "containerDesc">
-                <div class = "webdev"><a href = "index.html"><h2>learning webdev</h2></a></div>
+                <div class = "webdev"><a><h2>learning webdev</h2></a></div>
                 <div class = "codeforces"><a><h2>trying to get my codeforces rating into 1400</h2></a></div>
                 <div class = "youtube"><a><h2>preparing to continue doing youtube</h2></a></div>
             </div>
