--- a/projects/tdlProj.html
+++ b/projects/tdlProj.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>To do list - AndyDev</title>
+        <title>oldschool calculator - AndyDev</title>
         <link rel="shortcut icon" href="favicon.ico"/>
         <link rel="stylesheet" href="tdlProj.css">
         <link href="https://fonts.googleapis.com/css2?family=Varela&display=swap" rel="stylesheet">
