added button color

--- a/projects/tdlProj.html
+++ b/projects/tdlProj.html
@@ -28,25 +28,25 @@
                     <button onclick="calc(7)"><div class = "button_box tujuh">7</div></button>
                     <button onclick="calc(8)"><div class = "button_box delapan">8</div></button>
                     <button onclick="calc(9)"><div class = "button_box sembilan">9</div></button>
-                    <button onclick="setOperator(1)"><div class = "button_box tambah">+</div></button>
+                    <button onclick="setOperator(1)" class = "nonint"><div class = "button_box tambah">+</div></button>
                 </div>
                 <div class = "button_layer">
                     <button onclick="calc(4)"><div class = "button_box empat">4</div></button>
                     <button onclick="calc(5)"><div class = "button_box lima">5</div></button>
                     <button onclick="calc(6)"><div class = "button_box enam">6</div></button>
-                    <button onclick="setOperator(2)"><div class = "button_box kurang">-</div></button>
+                    <button onclick="setOperator(2)" class = "nonint"><div class = "button_box kurang">-</div></button>
                 </div>
                 <div class = "button_layer">
                     <button onclick="calc(1)"><div class = "button_box satu">1</div></button>
                     <button onclick="calc(2)"><div class = "button_box dua">2</div></button>
                     <button onclick="calc(3)"><div class = "button_box tiga">3</div></button>
-                    <button onclick="setOperator(3)"><div class = "button_box kali">x</div></button>
+                    <button onclick="setOperator(3)" class = "nonint"><div class = "button_box kali">x</div></button>
                 </div>
                 <div class = "button_layer">
                     <button onclick="clearCalc()"><div class = "button_box clearCalc">AC</div></button>
                     <button onclick="calc(0)"><div class = "button_box nol">0</div></button>
-                    <button onclick="calculate()"><div class = "button_box hasil">=</div></button>
-                    <button onclick="setOperator(4)"><div class = "button_box bagi">:</div></button>
+                    <button onclick="calculate()" class = "hasil"><div class = "button_box hasil">=</div></button>
+                    <button onclick="setOperator(4)" class = "nonint"><div class = "button_box bagi">:</div></button>
                 </div>
                 <div id = "hidden"></div>
                 <div id = "hidden_2nd"></div>
