--- a/projects/tdlProj.html
+++ b/projects/tdlProj.html
@@ -14,8 +14,8 @@
                 <ul>
                     <li><a href = "../index.html">home</a></li>
                     <li><a href = "../projects.html">.project</a></li>
-                    <li><a href = "#about">about</a></li>
-                    <li><a href = "#contact">contact</a></li>
+                    <li><a href = "../index.html#about">about</a></li>
+                    <li><a href = "../index.html#contact">contact</a></li>
                 </ul>
             </nav>
         </header>
