--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>.project - AndyDev</title>
-        <link rel="shortcut icon" href="favicon.ico"/>
+        <link rel="shortcut icon" href="../favicon.ico"/>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Varela&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
