--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id = "about">
             <div class = "sContent">
                 <div class = "boxed_text">
-                    <h1 class = "boxed">who am i?</h1>
+                    <h1 class = "boxed">about me</h1>
                 </div>
                 <div class = "description">
                     <p>
@@ -44,7 +44,7 @@
         </div>
         <div class = "sContento">
             <div class = "boxed_texto">
-                <h1 class = "boxed">what am i currently doing?</h1>
+                <h1 class = "boxed">what i have been doing currently</h1>
             </div>
             <div class = "containerDesc">
                 <div class = "webdev"><a><h2>learning webdev</h2></a></div>
